clusters/pi/cloudflared/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cloudflared
  namespace: cloudflared
spec:
  podSelector:
    matchLabels:
      app: cloudflared
  policyTypes:
    - Ingress
  ingress: []
